# demand-shock-detector-lakehouse

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt
data/sample/: demand_sample.csv
databricks/: README_DATABRICKS.md
databricks/jobs/: job_batch_score.json  job_bronze_to_gold.json  job_train_and_register.json
databricks/notebooks/: 00_config.py  01_bronze_ingest.py  02_silver_clean.py  03_gold_features.py  04_train_model_mlflow.py  05_batch_scoring_writeback.py  06_register_model.py
databricks/sql/: 00_create_catalog_schema.sql  01_create_bronze_tables.sql  02_create_silver_tables.sql  03_create_gold_tables.sql  04_grants.sql  05_sample_queries.sql
scripts/: download_m5.py  make_sample_small.py
service/: Dockerfile  docker-compose.yml  requirements.txt
service/app/: __init__.py  config.py  logging_config.py  main.py  schemas.py
service/app/features/: __init__.py  transform.py
service/app/model/: __init__.py  loader.py  predictor.py
service/app/utils/: __init__.py  health.py
service/tests/: __init__.py  test_health.py  test_predict.py
