[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "demand-shock-detector-lakehouse"
version = "0.1.0"
description = "Demand Shock Detector using Azure Databricks, Unity Catalog, Delta Lake, MLflow, and FastAPI"
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }

[project.optional-dependencies]
service = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "mlflow>=2.13.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "black>=24.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["service/tests"]
